--- a/FrontEnd/Busqueda.html
+++ b/FrontEnd/Busqueda.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador de Monumentos de Interés Cultural</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Leaflet.js CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
-
 <header class="header">
     <h1>Buscador de Monumentos de Interés Cultural</h1>
     <nav class="navigation">
@@ -20,42 +21,58 @@
         <form class="form">
             <div class="form-group">
                 <label for="localidad">Localidad:</label>
-                <input type="text" id="localidad" placeholder="Añadir texto">
+                <input type="text" id="localidad" placeholder="Añadir texto" autocomplete="off">
+                <ul id="localidad-suggestions" class="suggestions"></ul>
             </div>
             <div class="form-group">
                 <label for="codigo_postal">Cód. Postal:</label>
-                <input type="text" id="codigo_postal" placeholder="Añadir texto">
+                <input type="text" id="codigo_postal" placeholder="Añadir texto" autocomplete="off">
+                <ul id="codigo-postal-suggestions" class="suggestions"></ul>
             </div>
             <div class="form-group">
                 <label for="provincia">Provincia:</label>
-                <input type="text" id="provincia" placeholder="Añadir texto">
+                <input type="text" id="provincia" placeholder="Añadir texto" autocomplete="off">
+                <ul id="provincia-suggestions" class="suggestions"></ul>
             </div>
             <div class="form-group">
                 <label for="tipo">Tipo:</label>
                 <select id="tipo">
-                    <option value="yacimientoArqueologico">Yacimiento Arqueológico</option>
-                    <option value="monasterioConvento">Monasterio-Convento</option>
-                    <option value="iglesiaErmita">Iglesia-Ermita</option>
-                    <option value="castilloTorre">Castillo-Torre</option>
-                    <option value="edificioPalacio">Edificio-Palacio</option>
-                    <option value="puente">Puente</option>
-                    <option value="otros">Otros</option>
+                    <option value="">Todos</option>
+                    <option value="IglesiaErmita">Iglesia-Ermita</option>
+                    <option value="MonasterioConvento">Monasterio-Convento</option>
+                    <option value="CastilloTorreFuerte">Castillo-Torre</option>
+                    <option value="Otros">Otros</option>
                 </select>
             </div>
             <div class="buttons">
-                <button type="button" id="cancelar">Cancelar</button>
-                <button type="submit" id="buscar">Buscar</button>
+                <button type="reset" id="cancelar">Cancelar</button>
+                <button type="button" id="buscar">Buscar</button>
             </div>
         </form>
-        <div id="mapa" class="map">
-            <img src="https://via.placeholder.com/600x300.png?text=Mapa" alt="Mapa de monumentos">
-        </div>
+        <div id="mapa" class="map"></div>
     </section>
     <section id="resultados" class="results">
         <p>Resultados de la búsqueda:</p>
+        <div class="table-container">
+            <table id="tabla-resultados">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Tipo</th>
+                        <th>Dirección</th>
+                        <th>Localidad</th>
+                        <th>Cód. Postal</th>
+                        <th>Provincia</th>
+                        <th>Descripción</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </section>
 </main>
 
-<script src="js/main.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="Logica.js"></script>
 </body>
 </html>
