--- a/FrontEnd/Carga.html
+++ b/FrontEnd/Carga.html
@@ -1,40 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carga del Almacén de Datos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<header class="header">
-    <h1>Carga del Almacén de Datos</h1>
-    <nav class="navigation">
-        <a href="Busqueda.html">Buscador de Monumentos</a>
-    </nav>
-</header>
+    <header class="header">
+        <h1>Carga del Almacén de Datos</h1>
+        <nav class="navigation">
+            <a href="Busqueda.html">Buscador de Monumentos</a>
+        </nav>
+    </header>
 
-<main class="container">
-    <form class="form">
-        <fieldset>
-            <legend>Seleccione fuente:</legend>
-            <label><input type="checkbox" value="castilla"> Castilla y León</label>
-            <label><input type="checkbox" value="valenciana" checked> Comunitat Valenciana</label>
-            <label><input type="checkbox" value="euskadi"> Euskadi</label>
-            <label><input type="checkbox" id="seleccionar_todas" value="todas"> Seleccionar todas</label>
-        </fieldset>
-        <div class="buttons">
-            <button type="button" id="cancelar">Cancelar</button>
-            <button type="button" id="cargar">Cargar</button>
-            <button type="button" id="borrar">Borrar Almacén de Datos</button>
-        </div>
-    </form>
-    <section id="resultados" class="results">
-        <p>Resultados de la carga:</p>
-    </section>
-</main>
+    <main class="container">
+        <form class="form" id="cargaForm">
+            <fieldset>
+                <legend>Seleccione fuente:</legend>
+                <label><input type="checkbox" name="fuente" value="castilla"> Castilla y León</label>
+                <label><input type="checkbox" name="fuente" value="valenciana" checked> Comunitat Valenciana</label>
+                <label><input type="checkbox" name="fuente" value="euskadi"> Euskadi</label>
+                <label><input type="checkbox" id="seleccionar_todas" value="todas"> Seleccionar todas</label>
+            </fieldset>
+            <div class="buttons">
+                <button type="button" id="cancelar">Cancelar</button>
+                <button type="button" id="cargar">Cargar</button>
+                <button type="button" id="borrar">Borrar Almacén de Datos</button>
+            </div>
+        </form>
+        <div id="resultados" class="resultados"></div>
+    </main>
 
-<script src="js/main.js"></script>
+    <script>
+        document.getElementById('cargar').addEventListener('click', async function () {
+            const selectedFuentes = Array.from(document.querySelectorAll('input[name="fuente"]:checked')).map(input => input.value);
+            const resultadosDiv = document.getElementById('resultados');
+            resultadosDiv.innerHTML = '';
+
+            // Clear necessary JSON and log files
+            await fetch('/clear_files', { method: 'POST' });
+
+            // Execute selected APIs
+            for (const fuente of selectedFuentes) {
+                let endpoint;
+                if (fuente === 'castilla') {
+                    endpoint = '/extractor/execute_csv';
+                } else if (fuente === 'valenciana') {
+                    endpoint = '/extractor/execute_json';
+                } else if (fuente === 'euskadi') {
+                    endpoint = '/extractor/execute_xml';
+                }
+
+                if (endpoint) {
+                    try {
+                        const response = await fetch(endpoint, { method: 'POST' });
+                        const result = await response.json();
+                        resultadosDiv.innerHTML += `<p>${fuente}: ${result.message}</p>`;
+                    } catch (error) {
+                        resultadosDiv.innerHTML += `<p>${fuente}: Error al ejecutar la API</p>`;
+                    }
+                }
+            }
+
+            // Get load results
+            try {
+                const response = await fetch('/load_results');
+                const logSummary = await response.text();
+                resultadosDiv.innerHTML += `<h2>Resultados de la carga:</h2><pre>${logSummary}</pre>`;
+            } catch (error) {
+                resultadosDiv.innerHTML += `<p>Error al obtener los resultados de la carga</p>`;
+            }
+
+            // Display total correct loads
+            try {
+                const response = await fetch('/total_correct_loads');
+                const totalCorrectLoads = await response.json();
+                resultadosDiv.innerHTML += `<p>Total de cargas correctas: ${totalCorrectLoads.total}</p>`;
+            } catch (error) {
+                resultadosDiv.innerHTML += `<p>Error al obtener el total de cargas correctas</p>`;
+            }
+        });
+    </script>
+
 </body>
+
 </html>
