--- a/FrontEnd/Carga.html
+++ b/FrontEnd/Carga.html
@@ -36,7 +36,7 @@
     </main>
 
     <!-- Link to the external JavaScript file -->
-    <script src="carga.js"></script>
+    <script src="Carga.js"></script>
 </body>
 
 </html>
