--- a/FrontEnd/Carga.html
+++ b/FrontEnd/Carga.html
@@ -7,14 +7,22 @@
     <title>Carga del Almacén de Datos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<style>
+    /* Estilo para el botón activo */
+#cargaBtn {
+    background-color: #ffffff;
+    text-decoration: underline; /* Subraya el texto */
+}
+</style>
 
 <body>
-
+    <nav class="top-menu">
+        <span class="menu-title">Menú de Navegación: </span>
+        <a href="Carga.html" class="menu-button" id="cargaBtn">Carga de Datos</a>
+        <a href="Busqueda.html" class="menu-button" id="busquedaBtn">Ir a Busqueda de Monumentos</a>
+    </nav>
     <header class="header">
         <h1>Carga del Almacén de Datos</h1>
-        <nav class="navigation">
-            <a href="Busqueda.html">Buscador de Monumentos</a>
-        </nav>
     </header>
 
     <main class="container">
