--- a/FrontEnd/Carga.html
+++ b/FrontEnd/Carga.html
@@ -30,7 +30,7 @@
             <fieldset>
                 <legend>Seleccione fuente:</legend>
                 <label><input type="checkbox" name="fuente" value="castilla"> Castilla y León</label>
-                <label><input type="checkbox" name="fuente" value="valenciana" checked> Comunitat Valenciana</label>
+                <label><input type="checkbox" name="fuente" value="valenciana"> Comunitat Valenciana</label>
                 <label><input type="checkbox" name="fuente" value="euskadi"> Euskadi</label>
                 <label><input type="checkbox" id="seleccionar_todas" value="todas"> Seleccionar todas</label>
             </fieldset>
