--- a/FrontEnd/Busqueda.html
+++ b/FrontEnd/Busqueda.html
@@ -45,11 +45,14 @@
             </div>
             <div class="form-group">
                 <label for="tipo">Tipo:</label>
-                <select id="tipo">
+                <select id="tipo" name="tipo">
                     <option value="">Todos</option>
+                    <option value="YacimientoArqueologico">Yacimiento-Arqueologico</option>
                     <option value="IglesiaErmita">Iglesia-Ermita</option>
                     <option value="MonasterioConvento">Monasterio-Convento</option>
-                    <option value="CastilloTorreFuerte">Castillo-Torre</option>
+                    <option value="CastilloFortalezaTorre">Castillo-Fortaleza-Torre</option>
+                    <option value="EdificioPalacio">Edificio-Palacio</option>
+                    <option value="Puente">Puente</option>
                     <option value="Otros">Otros</option>
                 </select>
             </div>
