--- a/FrontEnd/Carga.html
+++ b/FrontEnd/Carga.html
@@ -9,10 +9,11 @@
 </head>
 <style>
     /* Estilo para el botón activo */
-#cargaBtn {
-    background-color: #ffffff;
-    text-decoration: underline; /* Subraya el texto */
-}
+    #cargaBtn {
+        background-color: #ffffff;
+        text-decoration: underline;
+        /* Subraya el texto */
+    }
 </style>
 
 <body>
@@ -26,7 +27,7 @@
     </header>
 
     <main class="container">
-        <form class="form" id="cargaForm" >
+        <form class="form" id="cargaForm">
             <fieldset>
                 <legend>Seleccione fuente:</legend>
                 <label><input type="checkbox" name="fuente" value="castilla"> Castilla y León</label>
@@ -38,6 +39,7 @@
                 <button type="button" id="cancelar">Cancelar</button>
                 <button type="submit" id="cargar">Cargar</button>
                 <button type="button" id="borrar">Borrar Almacén de Datos</button>
+                <button type="button" id="mostrarLogs">Mostrar Logs Generales</button>
             </div>
         </form>
         <div id="resultados-container">
