Eliminar logs adaptado

--- a/FrontEnd/Carga.html
+++ b/FrontEnd/Carga.html
@@ -40,7 +40,7 @@
                 <button type="submit" id="cargar">Cargar</button>
                 <button type="button" id="borrar">Borrar Almacén de Datos</button>
                 <button type="button" id="mostrarLogs">Mostrar Logs Generales</button>
-                <button type="button" id="borrarLogs">Eliminar Logs</button>
+                <button type="button" id="borrarLogs">Eliminar Logs (Una fuente cada vez)</button>
             </div>
         </form>
         <div id="resultados-container">
